--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "symfony/security-bundle": "^5.0",
         "symfony/orm-pack": "^1.0",
         "symfony/framework-bundle": "^5.0",
@@ -20,11 +20,23 @@
         "symfony/twig-bundle": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.4"
+        "phpunit/phpunit": "^8.2",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "autoload": {
         "psr-4": {
             "PSUserBundle\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "PSUserBundle\\Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "tests": [
+            "phpunit",
+            "phpcs"
+        ]
     }
 }
