--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PSUserBundle\\": "src/"
+            "PSUserBundle\\": "./"
         }
     },
     "autoload-dev": {
