--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,7 +13,12 @@
     </testsuites>
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
-            <directory suffix=".php">src</directory>
+            <directory suffix=".php">Controllers</directory>
+            <directory suffix=".php">Credentials</directory>
+            <directory suffix=".php">DependencyInjection</directory>
+            <directory suffix=".php">Fields</directory>
+            <directory suffix=".php">Form</directory>
+            <directory suffix=".php">Models</directory>
         </whitelist>
     </filter>
     <logging>
