--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "plume-solution/user-bundle",
     "description": "A new bundle for easy user management",
+    "version": "1.0.0-dev",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
@@ -14,9 +15,13 @@
         "php": ">=7.3",
         "symfony/security-bundle": "^5.0",
         "symfony/orm-pack": "^1.0",
+        "doctrine/doctrine-bundle": "^2.0",
         "symfony/framework-bundle": "^5.0",
         "symfony/form": "^5.0",
         "symfony/twig-bundle": "^5.0"
+    },
+    "suggest": {
+        "php": ">=7.4 for fixing deprecated package and better performance"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2",
