--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "doctrine/doctrine-bundle": "^2.0",
         "symfony/framework-bundle": "^5.0",
         "symfony/form": "^5.0",
-        "symfony/twig-bundle": "^5.0"
+        "symfony/twig-bundle": "^5.0",
+        "ocramius/proxy-manager": "^2.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2",
