--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "symfony/framework-bundle": "^5.0",
         "symfony/form": "^5.0",
         "symfony/twig-bundle": "^5.0",
-        "ocramius/proxy-manager": "^2.8"
+        "ocramius/proxy-manager": "2.7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.2",
