--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "PSUserBundle\\Tests\\": "tests/"
+            "PSUserBundle\\Tests\\": "Tests/"
         }
     },
     "scripts": {
