Fix doctrine deps.

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=7.4",
         "symfony/security-bundle": "^5.0",
+        "ocramius/proxy-manager": "^2.8.1",
         "symfony/orm-pack": "^1.0",
         "doctrine/doctrine-bundle": "^2.0",
         "symfony/framework-bundle": "^5.0",
