--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.4",
-        "symfony/http-kernel": "~>5.1.5"
+        "symfony/http-kernel": "~>5.1.5",
         "symfony/security-bundle": "^5.0",
         "ocramius/proxy-manager": "^2.8.1",
         "symfony/orm-pack": "^1.0",
