--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,21 @@ php:
   - 7.4
   - 8.0
 
+include:
+  - php: 7.4
+    env: SYMFONY_REQUIRE=4.*
+  - php: 7.4
+    env: SYMFONY_REQUIRE=5.*
+  - php: 8.0
+    env: SYMFONY_REQUIRE=4.*
+  - php: 8.0
+    env: SYMFONY_REQUIRE=5.*
+
+before_install:
+  - composer global require --no-progress --no-scripts --no-plugins symfony/flex
+
 install:
-  - composer install
+  - composer update --prefer-dist --no-progress --prefer-lowest
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
