--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "plume-solution/user-bundle",
     "description": "A new bundle for easy user management",
-    "version": "1.0.0-dev",
+    "version": "1.0.0",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
@@ -12,15 +12,15 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.4",
-        "symfony/http-kernel": "^5.1.5",
-        "symfony/security-bundle": "^5.0",
+        "php": "^7.4 | 8.0",
+        "symfony/http-kernel": "^4.4 | ^5.1.5",
+        "symfony/security-bundle": "^4.4 | ^5.0",
         "ocramius/proxy-manager": "^2.8.1",
         "symfony/orm-pack": "^2.0",
         "doctrine/doctrine-bundle": "^2.0",
-        "symfony/framework-bundle": "^5.0",
-        "symfony/form": "^5.0",
-        "symfony/twig-bundle": "^5.0"
+        "symfony/framework-bundle": "^4.4 | ^5.0",
+        "symfony/form": "^4.4 | ^5.0",
+        "symfony/twig-bundle": "^4.4 | ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -28,12 +28,12 @@
     },
     "autoload": {
         "psr-4": {
-            "PSUserBundle\\": "src/"
+            "PlumeSolution\\UserBundle\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "PSUserBundle\\Tests\\": "tests/"
+            "PlumeSolution\\UserBundle\\Tests\\": "tests/"
         }
     },
     "scripts": {
