--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,20 @@
 language: php
+os: linux
 
 php:
   - 7.4
   - 8.0
 
-include:
-  - php: 7.4
-    env: SYMFONY_REQUIRE=4.*
-  - php: 7.4
-    env: SYMFONY_REQUIRE=5.*
-  - php: 8.0
-    env: SYMFONY_REQUIRE=4.*
-  - php: 8.0
-    env: SYMFONY_REQUIRE=5.*
+matrix:
+  include:
+    - php: 7.4
+      env: SYMFONY_REQUIRE=4.*
+    - php: 7.4
+      env: SYMFONY_REQUIRE=5.*
+    - php: 8.0
+      env: SYMFONY_REQUIRE=4.*
+    - php: 8.0
+      env: SYMFONY_REQUIRE=5.*
 
 before_install:
   - composer global require --no-progress --no-scripts --no-plugins symfony/flex
