Add cs script to composer.

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,9 @@
         "tests": [
             "phpunit",
             "phpcs"
+        ],
+        "cs": [
+            "phpcs"
         ]
     }
 }
