--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": "^7.4 | 8.0",
+        "php": "^7.4 | ^8.0",
         "symfony/http-kernel": "^4.4 | ^5.1.5",
         "symfony/security-bundle": "^4.4 | ^5.0",
         "ocramius/proxy-manager": "^2.8.1",
