--- a/composer.json
+++ b/composer.json
@@ -13,17 +13,17 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/http-kernel": "4.4.* | ^5.1.5",
         "symfony/security-bundle": "^4.4 | ^5.0",
-        "symfony/orm-pack": "^2.0",
         "doctrine/doctrine-bundle": "^2.0",
-        "symfony/framework-bundle": "^4.4 | ^5.0",
-        "symfony/form": "^4.4 | ^5.0",
-        "symfony/twig-bundle": "^4.4 | ^5.0"
+        "symfony/framework-bundle": ">=4.4",
+        "symfony/form": "^4.4 | ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.5"
+    },
+    "suggest": {
+        "symfony/twig-bundle": "For view support of user system"
     },
     "autoload": {
         "psr-4": {
