--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
     "name": "plume-solution/user-bundle",
     "description": "A new bundle for easy user management",
-    "version": "1.1.1
-   ",
+    "version": "1.1.1",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
