--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "plume-solution/user-bundle",
     "description": "A new bundle for easy user management",
-    "version": "1.1.1",
+    "version": "2.0",
     "type": "symfony-bundle",
     "license": "MIT",
     "authors": [
@@ -13,10 +13,10 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/security-bundle": "^4.4 | ^5.0",
+        "symfony/security-bundle": "^5.3",
         "doctrine/doctrine-bundle": "^2.0",
-        "symfony/framework-bundle": ">=4.4",
-        "symfony/form": "^4.4 | ^5.0"
+        "symfony/framework-bundle": "^5.0",
+        "symfony/form": "^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
