--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "minimum-stability": "stable",
     "require": {
         "php": "^7.4 | ^8.0",
-        "symfony/security-bundle": "^5.3",
+        "symfony/security-bundle": "^5.3|^6.0",
         "doctrine/doctrine-bundle": "^2.0",
-        "symfony/framework-bundle": "^5.0",
+        "symfony/framework-bundle": "^5.0|^6.0",
         "symfony/form": "^5.0"
     },
     "require-dev": {
